# herzeus

./: .gitignore  .goreleaser.yaml  .renovaterc.json  Makefile  README.md  boilerplate.yml  go.mod  hello.py  magefile.go  main.go  pyproject.toml
.github/workflows/: ci.yml
cmd/: hello.go  root.go  root_test.go  version.go
mypackage/: pyproject.toml
src/herzeus/: __init__.py
tests/: test_herzeus.py
thisoctober/.github/workflows/: ci.yml
tmpl/.github/workflows/: ci.yml
