[project]
name = "herzeus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
   { name = "Taylor Monacelli", email = "taylormonacelli@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
herzeus = "herzeus:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"

[dependency-groups]
dev = [
   "pytest>=8.3.3",
]

